[package]
name = "rtshark"
version = "2.9.0"
edition = "2021"
authors = ["CrabeDeFrance"]
license = "MIT OR Apache-2.0"
description = "A Rust interface for TShark"
repository = "https://github.com/CrabeDeFrance/rtshark"
homepage = "https://github.com/CrabeDeFrance/rtshark"
documentation = "https://docs.rs/rtshark"
readme = "README.md"
categories = ["network-programming", "api-bindings", "parser-implementations"]
keywords = ["wireshark", "tshark", "pcap", "network", "dissector"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false }
quick-xml = "0.36"
semver = "1"

[dev-dependencies]
tempdir = "0.3"
libc = "0.2"
serial_test="3"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["fs", "signal"] }
