[package]
name = "rtshark"
version = "3.2.0"
edition = "2021"
authors = ["CrabeDeFrance"]
license = "MIT OR Apache-2.0"
description = "A Rust interface for TShark"
repository = "https://github.com/CrabeDeFrance/rtshark"
homepage = "https://github.com/CrabeDeFrance/rtshark"
documentation = "https://docs.rs/rtshark"
readme = "README.md"
categories = ["network-programming", "api-bindings", "parser-implementations"]
keywords = ["wireshark", "tshark", "pcap", "network", "dissector"]
exclude = ["/.github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["quick-xml"]
async = ["tokio", "quick-xml/async-tokio"]

[dependencies]
tokio = { version = "1.45", features = [
    "process",
    "rt-multi-thread",
    "time",
    "macros",
], optional = true }
chrono = { version = "0.4", default-features = false }
semver = "1"
quick-xml = { version = "0.38", optional = true }

[dev-dependencies]
libc = "0.2"
serial_test = "3"
tempdir = "0.3"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30", features = ["fs", "signal"] }
